--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.2.0",
     "react-native-reanimated": "~3.16.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-image-picker": "~16.0.6",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
