--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "newArchEnabled": true,
     "jsEngine": "hermes",
     "plugins": [
+      ["@react-native-google-signin/google-signin"],
       [
         "expo-image-picker",
         {
@@ -31,13 +32,25 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.ex.demo",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5bb635db-440f-4626-9c74-6f1af883af3f"
+      }
+    },
+    "owner": "vanchien123"
   }
 }
