--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/auth": "^21.13.0",
+    "@react-native-firebase/database": "^21.13.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "assert": "^2.1.0",
     "expo": "~52.0.38",
+    "expo-auth-session": "~6.0.3",
+    "expo-av": "~15.0.2",
+    "expo-constants": "~17.0.8",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
+    "firebase": "^11.6.0",
     "path-browserify": "^1.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
@@ -20,8 +31,7 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-redux": "^9.2.0",
-    "expo-image-picker": "~16.0.6",
-    "expo-av": "~15.0.2"
+    "undefined": "expo-auth-session/providers/google"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
